# gbz

./: Cargo.toml  README.md
src/: gbwt.rs
